Fix prime & align. Remove multline class

--- a/site/assets/Temml-Asana.css
+++ b/site/assets/Temml-Asana.css
@@ -38,7 +38,8 @@ math {
   font-family: Asana Math;
 }
 
-*.mathcal {
+*.mathcal,
+mo.tml-prime {
   font-feature-settings: 'salt';
 }
 
@@ -66,12 +67,14 @@ mtable.tml-jot > mtr > mtd {
 
 /* Zero column gap for {alignat}, {split}, etc */
 mtable.tml-abut > mtr > mtd,
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(even) {
   padding-left: 0em;
   padding-right: 0em;
 }
 
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(even),
+mtable.tml-align-star > mtr > mtd:nth-child(odd) {
   padding-left: 1em;
   padding-right: 0em;
 }
@@ -82,15 +85,13 @@ mtable.tml-align > mtr > mtd:nth-child(1) {
 
 mtable.tml-align > mtr > mtd:nth-child(odd),
 mtable.tml-alignat > mtr > mtd:nth-child(odd),
-mtable.tml-aligned > mtr > mtd:nth-child(even),
-mtable.tml-multline > mtr:nth-child(1) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(even) {
   text-align: -webkit-left;
 }
 
 mtable.tml-align > mtr > mtd:nth-child(even),
 mtable.tml-alignat > mtr > mtd:nth-child(even),
-mtable.tml-aligned > mtr > mtd:nth-child(odd),
-mtable.tml-multline > mtr:nth-child(3) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(odd) {
   text-align: -webkit-right;
 }
 
