--- a/site/assets/Temml-STIX2.css
+++ b/site/assets/Temml-STIX2.css
@@ -2,7 +2,7 @@
 XITS is released under the SIL Open Font License.
 See https://github.com/stipub/stixfonts/blob/master/OFL.txt details.
 
-The WOFF font has been obtained from
+The STIX2 WOFF font has been obtained from
 https://github.com/stipub/stixfonts
 */
 
@@ -45,6 +45,10 @@ math {
   font-feature-settings: 'onum';
 }
 
+mo.tml-prime {
+  font-feature-settings: 'ss04';
+}
+
 /* AMS environment auto-numbering via CSS counter. */
 .tml-eqn::before {
   counter-increment: tmlEqnNo;
@@ -65,12 +69,14 @@ mtable.tml-jot > mtr > mtd {
 
 /* Zero column gap for {alignat}, {split}, etc */
 mtable.tml-abut > mtr > mtd,
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(even) {
   padding-left: 0em;
   padding-right: 0em;
 }
 
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(even),
+mtable.tml-align-star > mtr > mtd:nth-child(odd) {
   padding-left: 1em;
   padding-right: 0em;
 }
@@ -81,15 +87,13 @@ mtable.tml-align > mtr > mtd:nth-child(1) {
 
 mtable.tml-align > mtr > mtd:nth-child(odd),
 mtable.tml-alignat > mtr > mtd:nth-child(odd),
-mtable.tml-aligned > mtr > mtd:nth-child(even),
-mtable.tml-multline > mtr:nth-child(1) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(even) {
   text-align: -webkit-left;
 }
 
 mtable.tml-align > mtr > mtd:nth-child(even),
 mtable.tml-alignat > mtr > mtd:nth-child(even),
-mtable.tml-aligned > mtr > mtd:nth-child(odd),
-mtable.tml-multline > mtr:nth-child(3) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(odd) {
   text-align: -webkit-right;
 }
 
