--- a/site/assets/Temml-XITS.css
+++ b/site/assets/Temml-XITS.css
@@ -72,12 +72,14 @@ mtable.tml-jot > mtr > mtd {
 
 /* Zero column gap for {alignat}, {split}, etc */
 mtable.tml-abut > mtr > mtd,
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(odd) {
   padding-left: 0em;
   padding-right: 0em;
 }
 
-mtable.tml-align > mtr > mtd:nth-child(even) {
+mtable.tml-align > mtr > mtd:nth-child(even),
+mtable.tml-align-star > mtr > mtd:nth-child(odd),
+mtable.tml-align-star > mtr > mtd:nth-child(even) {
   padding-left: 1em;
   padding-right: 0em;
 }
@@ -88,15 +90,13 @@ mtable.tml-align > mtr > mtd:nth-child(1) {
 
 mtable.tml-align > mtr > mtd:nth-child(odd),
 mtable.tml-alignat > mtr > mtd:nth-child(odd),
-mtable.tml-aligned > mtr > mtd:nth-child(even),
-mtable.tml-multline > mtr:nth-child(1) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(even) {
   text-align: -webkit-left;
 }
 
 mtable.tml-align > mtr > mtd:nth-child(even),
 mtable.tml-alignat > mtr > mtd:nth-child(even),
-mtable.tml-aligned > mtr > mtd:nth-child(odd),
-mtable.tml-multline > mtr:nth-child(3) > mtd {
+mtable.tml-aligned > mtr > mtd:nth-child(odd) {
   text-align: -webkit-right;
 }
 
